# Paralela_Blur_Gray

./: README.md
LAB_blur/: CMakeLists.txt  blur.cu
LAB_gray_scale/: CMakeLists.txt  rgb_gris.cu
